--- a/public/config.yml
+++ b/public/config.yml
@@ -5,6 +5,12 @@ backend:
   open_authoring: true
   base_url: "https://pauseai-cms-proxy.netlify.app"
   squash_merges: true
+  commit_messages:
+      create: Create {{collection}} “{{slug}}” [skip netlify]
+      update: Update {{collection}} “{{slug}}” [skip netlify]
+      delete: Delete {{collection}} “{{slug}}” [skip netlify]
+      uploadMedia: Upload “{{path}}” [skip netlify]
+      deleteMedia: Delete “{{path}}” [skip netlify]
 publish_mode: "editorial_workflow"
 media_folder: "/static"
 editor:
