--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "darkreader": "^4.9.105",
-    "decap-cms-app": "~3.4.0",
+    "decap-cms-app": "^3.6.3",
     "prettier": "^3.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^6.2.1"
+    "vite": "^6.3.5"
   }
 }
