Add description to communities collection

--- a/public/config.yml
+++ b/public/config.yml
@@ -43,6 +43,7 @@ collections:
       - name: "body"
         widget: "markdown"
   - label: "Communities"
+    description: "Shown on pauseai.info/communities"
     name: "communities"
     files:
       - label: "PauseAI communities"
