Images not configured correctly #4

--- a/public/config.yml
+++ b/public/config.yml
@@ -7,6 +7,7 @@ backend:
   squash_merges: true
 publish_mode: "editorial_workflow"
 media_folder: "/static"
+public_folder: "/"
 editor:
   preview: false
 collections:
