--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "darkreader": "^4.9.105",
-    "decap-cms-app": "~3.4.0",
+    "decap-cms-app": "^3.8.1",
     "prettier": "^3.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
